# porqueno

./: .DS_Store 2.br  CNAME  Cargo.toml  Dioxus.toml  LICENSE  README.md  dioxus.config.js  favicon.ico.br  index.html  main.css  porqueno.png 2.br  porqueno_facade.JPG.br  porqueno_table.JPG.br
.github/workflows/: deploy.yml
assets/: index.html  main.css.br  pqn_angele.png.br
assets/dioxus/: PQN F&B.js  PQN F&B.js.br  PQN F&B_bg.wasm  PQN F&B_bg.wasm.br  porqueno.js  porqueno.js.br  porqueno_bg.wasm  porqueno_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js  inline0.js.br
assets/fonts/: Roboto-Bold.ttf.br  Roboto-BoldItalic.ttf.br  Roboto-Medium.ttf.br  Roboto-Regular.ttf.br
docs/: index.html  index.html.br  porqueno_facade.JPG.br  pqn_question_mark.png.br
docs/assets/dioxus/: PQN F&B.js.br  PQN F&B_bg.wasm  PQN F&B_bg.wasm.br  porqueno.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js  inline0.js.br
docs/fonts/: Roboto-Black.ttf.br  Roboto-BlackItalic.ttf.br  Roboto-Light.ttf.br  Roboto-Thin.ttf 2.br  Roboto-ThinItalic.ttf.br
fonts/: Roboto-Italic.ttf 2.br  Roboto-LightItalic.ttf 2.br  Roboto-MediumItalic.ttf.br
src/: main.rs  routes.rs
src/components/: about.rs  desc.rs  footer.rs  header.rs  home.rs  location.rs  login.rs  mod.rs  prepare.rs  product.rs
