[package]
name = "PQN"
version = "0.1.0"
authors = ["tae"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
wasm-bindgen = "0.2.93"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-router = "0.5.6"
